<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".MainActivity">

    <TextView
            android:id="@+id/moviename"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/moviename"/>
    <EditText
            android:id="@+id/editmoviename"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/movieName"
            android:layout_gravity="left"
            android:inputType="text"/>

    <TextView
            android:id="@+id/moviedesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/moviedesc"/>
    <EditText
            android:id="@+id/editmoviedesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/movieDesc"
            android:layout_gravity="left"
            android:inputType="text"/>
    <TextView
            android:id="@+id/movielang"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/movielang"/>
    <RadioGroup
            android:id="@+id/radiogrp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <RadioButton
                android:id="@+id/eng"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/englang"/>
        <RadioButton
                android:id="@+id/chi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/chilang"/>
        <RadioButton
                android:id="@+id/malay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/malaylang"/>
        <RadioButton
                android:id="@+id/tamil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tamillang"/>
    </RadioGroup>

    <TextView
            android:id="@+id/releasedate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/releasedate"/>

    <EditText
            android:id="@+id/editreleasedate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/movieRelease"
            android:inputType="date"/>

    <CheckBox
            android:id="@+id/notsuitable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notsuitable"/>

    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        <CheckBox
                android:id="@+id/violence"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:text="@string/violence"/>
        <CheckBox
                android:id="@+id/langused"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:text="@string/langused" />
    </LinearLayout>


</LinearLayout>